<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chanobol</string>
    <string name="settings">Settings</string>
    <string name="debug_settings">Debug Settings</string>
    <string name="view_image">View Image with</string>
    <string name="view_video">View Video with</string>
    <string name="share_image">Share Image</string>
    <string name="share_video">Share Video</string>
    <string name="watchtask">Chanobol – Watchtask</string>
    <!-- Screens -->
    <string name="replies_to">Replies to</string>
    <string name="quoted_by">Quoted by</string>
    <!-- Menu -->
    <string name="share">Share</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="view_external">View</string>
    <string name="show_post">Show Post</string>
    <string name="goto_post">Goto Post</string>
    <string name="close_all">Close All</string>
    <string name="show_gallery">Gallery</string>
    <string name="go_to_bottom">Go to Bottom</string>
    <string name="go_to_top">Go to Top</string>
    <string name="add_watchlist">Add to Watchlist</string>
    <string name="remove_watchlist">Remove from Watchlist</string>
    <string name="clear_watchlist">Clear Watchlist</string>
    <string name="refresh">Refresh</string>
    <string name="favorize">Favorize</string>
    <string name="save">Save</string>
    <string name="save_all">Save All</string>
    <string name="save_all_pics">Save All Pics</string>
    <string name="open_browser">Open in Browser</string>
    <!-- Drawer -->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Closed</string>
    <string name="favorite_boards">Favorite Boards</string>
    <string name="all_boards">All Boards</string>
    <string name="watchlist">Watchlist</string>
    <string name="about">About</string>
    <string name="favorites">Favorites</string>
    <!-- About -->
    <string name="about_app_title">About Chanobol</string>
    <string name="about_app">
        <![CDATA[
        <p>
        Chanobol is a fast and usable 4Chan reader inspired by
        <a href="https://github.com/grzegorznittner/chanu">Chanu</a>,
        <a href="https://floens.github.io/Clover/">Clover</a>
        and more apps.
        Find the source code <a href="https://github.com/eugenkiss/chanobol">here</a>.\n
        </p>

        <p>
        Libraries used include<br/>
        <a href="https://github.com/koush/ion">Ion</a><br/>
        <a href="https://github.com/malmstein/fenster">Fenster</a><br/>
        <a href="https://github.com/chrisbanes/PhotoView">PhotoView</a><br/>
        <a href="http://jsoup.org">jsoup</a><br/>
        <a href="https://github.com/johncarl81/parceler">Parceler</a><br/>
        <a href="http://square.github.io/dagger">Dagger</a><br/>
        <a href="http://jakewharton.github.io/butterknife">Butterknife</a>
        </p>

        <p>
        If you want to show your support for Chanobol consider
        buying <a href="https://play.google.com/store/apps/details?id=truefool.premium">True Fool</a>.
        </p>
        ]]>
    </string>
    <!-- Dialogs -->
    <string name="exit_sure">Are you sure you want to exit?</string>
    <string name="delete_title">Delete?</string>
    <string name="add_favorite_title">Add favorite board</string>
    <string name="favorize_title">Favorize?</string>
    <string name="favorite_added">added as favorite</string>
    <string name="open_thread_confirmation">Open this thread?</string>
    <string name="clear_watchlist_title">Clear Watchlist?</string>
    <string name="watchlist_cleared">Watchlist cleared</string>
    <!-- Post Popup Dialog -->
    <string name="copy_text">Copy Text</string>
    <string name="clipoard_copy_label">Post text</string>
    <string name="jump">Jump to Post</string>
    <!-- Toasts -->
    <string name="no_app">No suitable app</string>
    <string name="no_board">Board doesn\'t exist</string>
    <string name="no_thread">Thread is dead</string>
    <string name="image_saved_to_gallery">Image saved to gallery</string>
    <string name="copied_text">Copied text to clipboard</string>
    <string name="corrupted_thread">Cannot read thread (corrupted?)</string>
    <!-- Threads -->
    <string name="sort_bump">Bump order</string>
    <string name="sort_replies">Reply count</string>
    <string name="sort_images">Image count</string>
    <string name="sort_date">Creation date</string>
    <!-- For ImageSaver from Clover -->
    <string name="open_link_failed">No applications found to open link</string>
    <string name="download_confirm">%1$s images will be downloaded to %2$s</string>
    <string name="ok">OK</string>
    <string name="image_open_failed">Failed to open image</string>
    <string name="image_save_directory_error">Cannot make save directory</string>
    <string name="image_save_succeeded">Saved image to</string>
    <string name="image_save_failed">Saving image failed</string>
    <string name="action_share">Share</string>
</resources>
