<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/save"
          android:title="@string/save"
          app:showAsAction="never"
        />
    <item android:id="@+id/share"
          android:title="@string/share"
          app:showAsAction="never"
        />
    <item android:id="@+id/view"
          android:title="@string/view_external"
          app:showAsAction="never"
        />
    <item android:id="@+id/showPost"
          android:title="@string/show_post"
          android:visible="false"
          app:showAsAction="never"
        />
    <item android:id="@+id/gotoPost"
          android:title="@string/goto_post"
          android:visible="false"
          app:showAsAction="never"
        />
    <item android:id="@+id/gallery"
          android:title="@string/show_gallery"
          app:showAsAction="never"
        />
</menu>